# bonk

./: .gitignore  AGENTS.md  README.md  devenv.nix  pyproject.toml
src/bonk/: __init__.py  __main__.py
src/dvd_screensaver/: __init__.py  __main__.py
